--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,70 @@
-<h3>Home Component</h3>
-<p>Welcome to Angular Seed</p>
+<div class="container">
+    <h3> RWMT - HMI </h3>
+    <form #form="ngForm"
+          novalidate>
+        <!-- <div class="form-group" [class.valid] = "firstNamed.touched  && firstNamed.dirty && firstNamed.invalid">
+            <label class="col-form-label">First Name</label>
+            <input #firstNamed = "ngModel" class="form-control"
+                   type="text"
+                   name="firstNamed"
+                   [(ngModel)] = 'model.firstNm' required maxlength="3">
+            <h5 *ngIf = 'firstName'> 'Hi {{ firstName }} :-)'</h5>
+        </div> -->
+        <!-- <div class="form-group">
+            <label>Last Name</label>
+            <input type="text"
+                   class="form-control"
+                   name="lastName"
+                   placeholder="Last Name"
+                   [(ngModel)] = "model.lastNm">
+        </div>
+        <div class="checkbox">
+            <label>
+                <input type="checkbox"
+                       name="FulltimeEmployee"
+                       [(ngModel)] = "model.isFullTimeEmployee"> Full time Employee
+            </label>
+        </div>
+
+        <label> Pay Type </label>
+        <div class="radio">
+            <label>
+                <input type="radio"
+                       name="paymenttype"
+                       [(ngModel)] = 'model.paymentType'
+                       value="w2">
+                        w2
+            </label>
+        </div>
+
+        <div class="radio">
+            <label>
+                <input type="radio"
+                       name="paymenttype"
+                       [(ngModel)] = 'model.paymentType'
+                       value="1099">
+                        1099
+            </label>
+        </div> -->
+        <div class="form-group" [class.has-error] = "model.isPrimaryLanguageNull">
+            <label class="control-label"> Primary Languages</label>
+            <select class="form-control" name = "primaryLanguage"  [(ngModel)] = "model.primaryLanguage"
+            (blur) = "validatePrimaryLanguage()">
+                <option value = "default">Select a Language</option>
+                <option *ngFor="let lang of languagesList">{{lang}} </option>
+            </select>
+        </div> 
+        <!-- <div
+        *ngIf = "firstNamed.touched  && firstNamed.dirty && firstNamed.invalid" class="alert alert-danger" role="alert">
+            First Name is a required field
+          </div> -->
+
+        <button class="btn btn-primary"
+                type="submit">OK</button>
+
+    </form>
+</div>
+
+<!-- <main>
+          <router-outlet></router-outlet>
+      </main> -->
